ml(tokenizer): add subtokens to output